# src/lib/app/Models/AuthDto.php
@@ -1,0 +1,20 @@
+<?php
+/**
+ * AuthDto
+ */
+
+namespace App\Models;
+
+/**
+ * AuthDto
+ */
+class AuthDto
+{
+
+    /** @var string $email */
+    public $email;
+
+    /** @var string $password */
+    public $password;
+
+}
